[package]
name = "gpu-info"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
ash = "0.38.0"
thiserror = "2"
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
# OpenGL related
# glutin = "0.32.1"
# gl = "0.14.0"
# raw-window-handle = "0.6"
# winit = "0.30"

[dev-dependencies]
test-log = "0.2"
pretty_assertions = "1"
